@@ -20,6 +20,7 @@
  - add test case framework [Mike Milner] (LP: #890851)
  - fix pylint warnings [Juerg Haefliger] (LP: #914739)
  - add support for adding and deleting CA Certificates [Mike Milner] (LP: #915232)
+ - in ci-info lines, use '.' to indicate empty field for easier machine reading
 0.6.2:
  - fix bug where update was not done unless update was explicitly set.
    It would not be run if 'upgrade' or packages were set to be installed
